[gd_scene load_steps=37 format=3 uid="uid://c7txarojsn80l"]

[ext_resource type="Texture2D" uid="uid://d3tkhmjkeshdc" path="res://assets/Entities/Enemies/Street/1/Attack.png" id="1_0rffp"]
[ext_resource type="Script" path="res://scripts/Enemies/Enemy.gd" id="1_t77kx"]
[ext_resource type="Texture2D" uid="uid://dc4kgio4grf51" path="res://assets/Entities/Enemies/Street/1/Idle.png" id="2_c2c7q"]
[ext_resource type="Texture2D" uid="uid://dw67tbu6r0ts7" path="res://assets/Entities/Enemies/Street/1/Death.png" id="2_xg3vn"]
[ext_resource type="Texture2D" uid="uid://dkj3ymynqgex0" path="res://assets/Entities/Enemies/Street/1/Hurt.png" id="3_0cnog"]
[ext_resource type="Texture2D" uid="uid://61mp3lrhar2h" path="res://assets/Entities/Enemies/Street/1/Walk.png" id="3_aeg80"]
[ext_resource type="PackedScene" uid="uid://bykanoiiqeula" path="res://scenes/Components/health_component.tscn" id="7_dht0w"]
[ext_resource type="PackedScene" uid="uid://csgx2hix6j4t1" path="res://scenes/Components/attack_component.tscn" id="8_8a18h"]
[ext_resource type="PackedScene" uid="uid://cjrjhuo8asa0y" path="res://scenes/Components/hitbox_component.tscn" id="9_eo5m3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pxwer"]
atlas = ExtResource("1_0rffp")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h40g"]
atlas = ExtResource("1_0rffp")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_75tjg"]
atlas = ExtResource("1_0rffp")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1577"]
atlas = ExtResource("1_0rffp")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm8ah"]
atlas = ExtResource("1_0rffp")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvs46"]
atlas = ExtResource("1_0rffp")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_padla"]
atlas = ExtResource("2_xg3vn")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1p3a"]
atlas = ExtResource("2_xg3vn")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn531"]
atlas = ExtResource("2_xg3vn")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7u63"]
atlas = ExtResource("2_xg3vn")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7hyo"]
atlas = ExtResource("2_xg3vn")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oslh"]
atlas = ExtResource("2_xg3vn")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3k5x"]
atlas = ExtResource("3_0cnog")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfkku"]
atlas = ExtResource("3_0cnog")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt0q7"]
atlas = ExtResource("2_c2c7q")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5nu6"]
atlas = ExtResource("2_c2c7q")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f1gc"]
atlas = ExtResource("2_c2c7q")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa376"]
atlas = ExtResource("2_c2c7q")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiy0x"]
atlas = ExtResource("3_aeg80")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8owi2"]
atlas = ExtResource("3_aeg80")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1eik"]
atlas = ExtResource("3_aeg80")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt1if"]
atlas = ExtResource("3_aeg80")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_te87p"]
atlas = ExtResource("3_aeg80")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_my1ux"]
atlas = ExtResource("3_aeg80")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_vf7y1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxwer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h40g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75tjg")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_m1577")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm8ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvs46")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_padla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1p3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn531")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7u63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7hyo")
}, {
"duration": 1e+07,
"texture": SubResource("AtlasTexture_0oslh")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3k5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfkku")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt0q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5nu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f1gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa376")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiy0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8owi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1eik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt1if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te87p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my1ux")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72hus"]
size = Vector2(20, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1ifr"]
size = Vector2(123, 34)

[node name="Desert_1" type="RigidBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_t77kx")
hp = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vf7y1")
animation = &"death"
autoplay = "idle"

[node name="HealthComponent" parent="." instance=ExtResource("7_dht0w")]
visible = false

[node name="attack_component" parent="." instance=ExtResource("8_8a18h")]
visible = false
collision_mask = 25

[node name="Hurtbox" type="CollisionShape2D" parent="attack_component"]
light_mask = 3
visibility_layer = 3
position = Vector2(10, 8)
shape = SubResource("RectangleShape2D_72hus")
debug_color = Color(0.960784, 0, 0, 0.419608)

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_eo5m3")]
collision_layer = 16
collision_mask = 9
health_component = NodePath("../HealthComponent")

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
light_mask = 4
visibility_layer = 7
position = Vector2(-10, 8)
rotation = -3.14159
shape = SubResource("RectangleShape2D_72hus")

[node name="Viewbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Viewbox"]
position = Vector2(61.5, 8)
shape = SubResource("RectangleShape2D_n1ifr")

[node name="Floor Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-10, 8)
rotation = -3.14159
shape = SubResource("RectangleShape2D_72hus")

[node name="rayCastRight" type="RayCast2D" parent="."]

[connection signal="child_entered_tree" from="attack_component/Hurtbox" to="." method="_on_hurtbox_child_entered_tree"]
[connection signal="child_entered_tree" from="attack_component/Hurtbox" to="." method="_on_hitbox_child_entered_tree"]
[connection signal="body_entered" from="Viewbox" to="." method="_on_viewbox_body_entered"]
[connection signal="body_exited" from="Viewbox" to="." method="_on_viewbox_body_exited"]
